--- a/Regulus.Utility/Regulus.Utility.csproj
+++ b/Regulus.Utility/Regulus.Utility.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.9.0</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>    
+    <Product>Regulus.Utility</Product>
+    <Version>0.1.9.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jiowchern/Regulus.Remote</PackageProjectUrl>
-    <Authors>Regulus.Utility</Authors>
-    <Company>Regulus.Utility</Company>
-    <Product>Regulus.Utility</Product>
+    <Authors>jc</Authors>
+    <Company></Company>
   </PropertyGroup>
 
 </Project>
