--- a/Regulus.Utility/Regulus.Utility.csproj
+++ b/Regulus.Utility/Regulus.Utility.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jiowchern/Regulus.Remote</PackageProjectUrl>
     <Authors>jc</Authors>
-    <Company></Company>
+    <Description>utility.</Description>
   </PropertyGroup>
 
 </Project>
