--- a/Regulus.Utility/Regulus.Utility.csproj
+++ b/Regulus.Utility/Regulus.Utility.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>    
     <Product>Regulus.Utility</Product>
-    <Version>0.1.11.10-alpha</Version>
+    <Version>0.1.11.11</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jiowchern/Regulus.Remote</PackageProjectUrl>
     <Authors>jc</Authors>
