--- a/Regulus.Utility/Regulus.Utility.csproj
+++ b/Regulus.Utility/Regulus.Utility.csproj
@@ -10,4 +10,8 @@
     <Description>utility.</Description>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="System.Buffers" Version="4.5.1" />
+		<PackageReference Include="System.Memory" Version="4.5.5" />
+	</ItemGroup>
 </Project>
