--- a/PinionCore.Utility.Test/PinionCore.Utility.Test.csproj
+++ b/PinionCore.Utility.Test/PinionCore.Utility.Test.csproj
@@ -10,11 +10,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="SpecFlow" Version="3.9.58" />
 	  <PackageReference Include="NUnit" Version="3.13.1" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+	  <PackageReference Include="System.Formats.Asn1" Version="9.0.0" />
+	  <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
