--- a/PinionCore.Utility/PinionCore.Utility.csproj
+++ b/PinionCore.Utility/PinionCore.Utility.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>    
     <Product>PinionCore.Utility</Product>
-    <Version>0.1.12.14</Version>
+    <Version>0.1.13.14</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jiowchern/PinionCore.Remote</PackageProjectUrl>
     <Authors>jc</Authors>
