chore: update project version and description
Update the project version from 0.1.14.14 to 0.2.0.0 to reflect the
introduction of significant new features. Enhance the description to
detail the library's purpose more clearly, specifying its role in
providing foundational types and utilities such as Value, Property,
Depot, StatusMachine, and memory pooling, which are essential for state
management and are utilized across PinionCore modules.

--- a/PinionCore.Utility/PinionCore.Utility.csproj
+++ b/PinionCore.Utility/PinionCore.Utility.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>    
     <Product>PinionCore.Utility</Product>
-    <Version>0.1.14.14</Version>
+    <Version>0.2.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jiowchern/PinionCore.Remote</PackageProjectUrl>
     <Authors>jc</Authors>
-    <Description>utility.</Description>
+    <Description>Common utility library providing foundational types including Value, Property, Depot, StatusMachine for state management, and memory pooling utilities used across PinionCore modules.</Description>
   </PropertyGroup>
 
 	<ItemGroup>
